[tool.poetry]
name = "camp_dashboard"
version = "0.1.0"
description = ""
authors = ["carlosavellaneda8 <carlos.avellaneda8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
streamlit = "^1.8.1"
altair = "4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
